--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "faunadb": "^4.1.3",
     "react": "^16.14.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
