--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "faunadb": "^4.1.3",
     "react": "^16.14.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
